# WindSurf-gRPC-API

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: advanced_usage.py  all_services_demo.py  quickstart.py
windsurf-toolkit/: Cargo.toml  README.md
windsurf-toolkit/.cargo/: config.toml
windsurf-toolkit/src/: main.rs
windsurf-toolkit/src/client/: mod.rs  models.rs  transport.rs
windsurf-toolkit/src/daemon/: injector.rs  mod.rs
windsurf-toolkit/src/gui/: app.rs  config.rs  csrf_finder.rs  icons.rs  key_detector.rs  membership.rs  mod.rs  theme.rs  widgets.rs
windsurf-toolkit/src/gui/pages/: account_page.rs  dashboard.rs  inject_page.rs  keys_page.rs  mcp_page.rs  mod.rs  models_page.rs  monitor_page.rs  proxy_page.rs  settings_page.rs  team_page.rs  user_status_page.rs
windsurf-toolkit/src/monitor/: checker.rs  mod.rs
windsurf-toolkit/src/proxy/: anthropic.rs  gemini.rs  key_pool.rs  mod.rs  models_map.rs  server.rs  streaming.rs
windsurf-toolkit/src/web/: dashboard.rs  mod.rs
windsurf_api/: __init__.py  auth.py  cli.py  client.py  models.py  transport.py
windsurf_api/proxy/: __init__.py  __main__.py  key_pool.py  model_map.py  server.py  streaming.py
windsurf_api/services/: __init__.py  analytics.py  api_server.py  extension_server.py  language_server.py  misc.py  plugins.py  seat_management.py
windsurf_api/tools/: __init__.py  account_factory.py  cascade_bot.py  pro_daemon.py
