[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windsurf-api"
version = "3.0.0"
description = "Reverse-engineered Windsurf IDE gRPC protocol → Python SDK | 13 services, 573 methods, zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "lixin"},
]
keywords = ["windsurf", "codeium", "grpc", "reverse-engineering", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/fendoushaonian/WindSurf-gRPC-API"
Repository = "https://github.com/fendoushaonian/WindSurf-gRPC-API"
Issues = "https://github.com/fendoushaonian/WindSurf-gRPC-API/issues"

[project.scripts]
windsurf-api = "windsurf_api.cli:main"

[tool.setuptools.packages.find]
include = ["windsurf_api*"]
